const_typed_builder_test/compile_fail/single_generic_multiple_mandatory_added_default_1.stderr
error[E0599]: no method named `build` found for struct `FooBuilder<_, false, false>` in the current scope
  --> ./compile_fail/single_generic_multiple_mandatory_added_default_1.rs:12:30
   |
4  |     #[derive(Debug, Default, PartialEq, Eq, Builder)]
   |                                             ------- method `build` not found for this struct
...
12 |     let foo = Foo::builder().build();
   |                              ^^^^^ method not found in `FooBuilder<_, false, false>`
   |
   = note: the method was found for
           - `FooBuilder<A, true, true>`
